Working checker.. with somehow now leaks

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: dkaplan <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/05/15 08:35:13 by dkaplan           #+#    #+#              #
-#    Updated: 2018/06/14 13:25:55 by dkaplan          ###   ########.fr        #
+#    Updated: 2018/06/18 12:41:09 by dkaplan          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,13 +21,15 @@ SOURCES = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c\
 		  ft_striteri.c ft_strjoin.c ft_strlcat.c ft_strlen.c ft_strmap.c\
 		  ft_strmapi.c ft_strncat.c ft_strncmp.c ft_strncpy.c ft_strnequ.c\
 		  ft_strnew.c ft_strnstr.c ft_strrchr.c ft_strsplit.c ft_strstr.c\
-		  ft_strsub.c ft_strtrim.c ft_tolower.c ft_toupper.c
+		  ft_strsub.c ft_strtrim.c ft_tolower.c ft_toupper.c ft_lstnew.c\
+		  ft_lstdelone.c ft_lstdel.c ft_lstadd.c ft_lstiter.c ft_lstmap.c\
+		  get_next_line.c
 CSOURCE = $(SOURCES:.c=.o)
 INCLUDES = libft.h
 
 $(NAME):
 	gcc -Wall -Werror -Wextra -I $(INCLUDES) -c $(SOURCES)
-	ar rc $(NAME) *.o
+	ar rc $(NAME) $(CSOURCE)
 	ranlib $(NAME)
 
 all: $(NAME)
