prints out stuff now

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -28,7 +28,7 @@ CSOURCE = $(SOURCES:.c=.o)
 INCLUDES = libft.h
 
 $(NAME):
-	gcc -Wall -Werror -Wextra -I $(INCLUDES) -c $(SOURCES)
+	gcc -Wall -Werror -Wextra -I.. $(INCLUDES) -c $(SOURCES)
 	ar rc $(NAME) $(CSOURCE)
 	ranlib $(NAME)
 
