--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: dkaplan <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/05/15 08:35:13 by dkaplan           #+#    #+#              #
-#    Updated: 2018/06/18 12:41:09 by dkaplan          ###   ########.fr        #
+#    Updated: 2018/07/30 12:18:20 by dkaplan          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,7 +28,7 @@ CSOURCE = $(SOURCES:.c=.o)
 INCLUDES = libft.h
 
 $(NAME):
-	gcc -Wall -Werror -Wextra -I.. $(INCLUDES) -c $(SOURCES)
+	gcc -Wall -Werror -Wextra -I $(INCLUDES) -c $(SOURCES)
 	ar rc $(NAME) $(CSOURCE)
 	ranlib $(NAME)
 
