--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,12 +6,12 @@
 #    By: dkaplan <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/07/26 14:50:13 by dkaplan           #+#    #+#              #
-#    Updated: 2018/07/30 12:03:01 by dkaplan          ###   ########.fr        #
+#    Updated: 2018/07/30 13:13:33 by dkaplan          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = ../out/pushswap
-SOURCES = checker.c push.c push_swap.c rotate.c swap.c utils.c
+SOURCES = exutils.c push.c push_swap.c rotate.c swap.c utils.c
 INCLUDES = ../libft/libft.a
 
 $(NAME):
