Fix more little annoying bugs

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,11 +6,11 @@
 #    By: dkaplan <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/07/26 14:50:13 by dkaplan           #+#    #+#              #
-#    Updated: 2018/07/31 13:25:49 by dkaplan          ###   ########.fr        #
+#    Updated: 2018/07/31 13:35:22 by dkaplan          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = ../out/push_swap
+NAME = ../prog/push_swap
 SOURCES = exutils.c push.c push_swap.c rotate.c swap.c utils.c
 INCLUDES = ../libft/libft.a
 
